syntax = "proto3";

option csharp_namespace = "netponto.AssetManagement.Protos";

option go_package="./;gen";

package AssetManagement;

service Provider {
	rpc CreateProvider (CreateProviderRequest) returns (CreateProviderResponse);
	rpc ListProviders (ListProvidersRequest) returns (ListProvidersResponse);
}

// Create Provider
message CreateProviderRequest {
	string tenantCode = 1;
	string name = 2;
	string queueName = 3;
}

message CreateProviderResponse {
	string url = 1;
}


// List Providers
message ListProvidersRequest {	
	string tenantCode = 1;
	int32 index = 2;
    int32 size = 3;
	string sort = 4;
	string order = 5;
}

message ListProvidersResponse {
	repeated ProviderResponse data = 1;
	int32 totalCount = 2;
}

message ProviderResponse {
	int64 id = 1;
	string name = 2;
}